--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/(tabs)/index.js"  ]
+    "expo-env.d.ts",
+    "app/(tabs)/index.tsxx",
+    "nativewind-env.d.ts"
+  ]
 }
